--- a/web/package.json
+++ b/web/package.json
@@ -13,12 +13,17 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@tanstack/react-query": "^5.37.1",
+    "axios": "^1.7.2",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
